src/objects/Web_Sale_Transaction__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Users__c</fullName>
        <label>Number of Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_courses__c</fullName>
        <label>Number of courses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Web_Sales_Primary_Contact__c</fullName>
        <label>Web Sales Primary Contact</label>
        <referenceTo>WeS_Tx_Primary_Contact__c</referenceTo>
        <relationshipLabel>Web Sales Transactions</relationshipLabel>
        <relationshipName>Web_Sales_Transactions</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <label>Web Sales Transaction</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Web Sale Transaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Web Sales Transactions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>